# InitializrSpringbootProjectFresh/src/main/java/net/citotech/cito/api/v2/dto/AccountValidationRequest.java
@@ -1,0 +1,22 @@
+package net.citotech.cito.api.v2.dto;
+
+public class AccountValidationRequest {
+    private String merchantNumber;
+    private String msisdn;
+
+    public String getMerchantNumber() {
+        return merchantNumber;
+    }
+
+    public void setMerchantNumber(String merchantNumber) {
+        this.merchantNumber = merchantNumber;
+    }
+
+    public String getMsisdn() {
+        return msisdn;
+    }
+
+    public void setMsisdn(String msisdn) {
+        this.msisdn = msisdn;
+    }
+}
